style.css
@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@800&display=swap");

body {
  margin: 0;
  background-color: hsl(218, 23%, 16%);
  height: 100vh;
  font-family: "Manrope", sans-serif;
  font-size: 28px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.container {
  position: relative;
  background-color: hsl(217, 19%, 24%);
  color: hsl(193, 38%, 86%);
  width: 600px;
  padding: 20px;
  border-radius: 25px;
  text-align: center;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.container h3 {
  font-size: 15px;
  letter-spacing: 5px;
  text-transform: uppercase;
  color: hsl(150, 100%, 66%);
  margin: 20px 0;
}

.container p {
  margin: 0;
}

.divider {
  background-image: url("images/pattern-divider-desktop.svg");
  width: 444px;
  height: 16px;
  margin: 40px 0;
}

.dice {
  position: absolute;
  top: 100%;
  left: 50%;
  transform: translate(-50%, -50%);
  background-color: hsl(150, 100%, 66%);
  width: 24px;
  height: 24px;
  padding: 20px;
  border-radius: 50%;
  display: flex;
}

.dice:hover {
  box-shadow: 0px 0px 25px hsl(150, 100%, 66%);
  cursor: pointer;
}

@media (max-width: 576px) {
  .container {
    width: 80vw;
  }
  .divider {
    background-image: url("images/pattern-divider-mobile.svg");
    width: 295px;
    height: 16px;
  }
}

